--- a/docker-compose-v6.yml
+++ b/docker-compose-v6.yml
@@ -26,7 +26,7 @@ services:
       retries: 10
 
   backend:
-    image: bqlpfy/springboot-backend:latest
+    image: bqlpfy/springboot-backend:1.4.2
     container_name: springboot-backend
     restart: unless-stopped
     environment:
@@ -54,7 +54,7 @@ services:
       start_period: 90s
 
   frontend:
-    image: bqlpfy/vite-frontend:latest
+    image: bqlpfy/vite-frontend:1.4.2
     container_name: vite-frontend
     restart: unless-stopped
     ports:
