--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,12 +2,13 @@ name: Build and Push Images Based on Version
 
 # 在这里定义统一版本号
 env:
-  VERSION: "1.4.2"
+  VERSION: "2.0.0-beta"
 
 on:
   push:
     branches:
       - main
+      - beta
 
 jobs:
   check-version:
